# SkyNet-Full

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  activate.sh  codecov.yml  pytest.ini
   └─ unit/      └─ models/:          └─ test_comum_base_smoke.py  # criar: teste mínimo "smoke" para validar a refatoração
   └─ unit/│     └─ models/: │        └─ comum_base.py    # editar: remover duplicidades (métodos duplicados)
.github/workflows/: SkyNet-Mobile.yml  skynet_ci.yml
backend/: .pylintrc  .ruff.toml  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
backend/app/: main.py  teste.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py  database.py
backend/app/infrastructure/models/: comum_base.py  favorite.py  file_models.py  folder_models.py
backend/app/infrastructure/services/: formatadores.py
backend/app/interfaces/api/v1/: __init__.py
backend/app/models/: __init__.py  comum_base.py  file_models.py  folder_models.py
backend/app/services/: formatadores.py
backend/controllers/: __init__.py  system_controller.py
backend/infrastructure/: database.py
backend/infrastructure/repositories/: os_repository.py  session_repository.py
backend/models/: __init__.py  _models.py  builder.py  comum_base.py  file_models.py  folder_models.py
backend/schemas/: system_schema.py
backend/services/: system_service.py
backend/tests/: conftest.py  test_api.py  test_formatadores.py
backend/tests/integration/: test_api_favorites.py
backend/tests/unit/: conftest.py  test_favorite_service.py
backend/tests/unit/models/: test_comum_base.py
backend/tests/unit/services/: test_formatadores.py
frontend/: App.tsx  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/components/: Button.tsx  FileCard.tsx  Input.tsx
frontend/cypress/integration/: e2e_spec.ts
frontend/hooks/: useAuth.ts  useFiles.ts  useLocalStorage.ts
frontend/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/public/: index.html
frontend/services/: api.ts  authService.ts  fileService.ts
frontend/src/: App.tsx  index.tsx
frontend/src/app/components/: FavoriteList.tsx
frontend/src/app/pages/: Dashboard.tsx
frontend/src/app/services/: api.ts
frontend/src/tests/: App.test.tsx
frontend/types/: file.types.ts  user.types.ts
