[project]
name = "skynet-mobile-backend"
version = "0.1.0"
description = "Backend do SkyNet-Mobile - API para gerenciamento de favoritos"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "DiasPedroQA", email = "your_email@example.com"}
]
license = {text = "MIT"}
keywords = ["fastapi", "favorites", "bookmarks", "api"]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy>=2.0.0",

    # Data Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",

    # Code Quality
    "ruff>=0.5.0",

    # Optional: Async tests
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/skynet-mobile"
Repository = "https://github.com/yourusername/skynet-mobile.git"
Documentation = "https://github.com/yourusername/skynet-mobile#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Ruff Configuration (Linter e Formatter)
# ============================================================================

[tool.ruff]
# Line length to match Black's default
line-length = 120

# Target Python version
target-version = "py311"

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "B008", # Do not perform function calls in argument defaults
    "C408", # Unnecessary dict call
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B",      # Ignore bugbear in tests
    "ARG",    # Ignore unused arguments in tests
    "SIM",    # Ignore simplify in tests
]

[tool.ruff.format]
# Use double quotes (Black's default)
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Skip magic trailing commas
skip-magic-trailing-comma = false

# Line ending
line-ending = "auto"

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Add options
addopts = """
    -v
    --cov=app
    --cov-report=term-missing
    --cov-report=html
    --strict-markers
    -p no:cacheprovider
"""

# Markers for test categorization
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "api: API endpoint tests",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "*/__init__.py",
    "app/main.py",  # Optional: exclude main from coverage
]

[tool.coverage.report]
# Show missing lines
show_missing = true

# Fail under this percentage
fail_under = 80

# Exclude lines
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

# ============================================================================
# MyPy Configuration (Optional - se usar type checking)
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true

# ============================================================================
# Scripts
# ============================================================================

[tool.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
test = "pytest"
lint = "ruff check ."
format = "ruff check . --fix"
